--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ example/
 /tests/e2e/E2E_TEST_PAIRED_TTEST_RESULTS.md
 /tests/e2e/E2E_TEST_PAIRED_TTEST.md
 /tests/e2e/screenshots
+data/api_keys.json
+data/webhooks.json
+data/*.db
